--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
+    <style>
+        a {
+            line-height: 2;
+            margin:10px;
+            text-decoration: none;
+        }
+    </style>
+</head>
 </head>
 <body>
 
-<a href="hello/string">string</a> <br>
-<a href="hello/json">json</a> <br>
-<a href="hello/screen">screen</a> <br>
-<a href="hello/screen-model-param?name=sejong">screen-model-param?name=sejong</a> <br>
-<a href="hello/screen-model-path/123">screen-model-path/123</a> <br>
-<a href="hello/form-screen">form-screen</a> <br>
-<a href="hello/json-screen">json-screen</a> <br>
+<a href="hello/string">01. string</a> <br>
+<a href="hello/json">02. json</a> <br>
+<a href="hello/screen">03. screen</a> <br>
+<a href="hello/screen-model-param?name=sejong">04. screen-model-param?name=sejong</a> <br>
+<a href="hello/screen-model-path/123">05. screen-model-path/123</a> <br>
+<a href="hello/form-screen">06. form-screen</a> <br>
+<a href="hello/json-screen">07. json-screen</a> <br>
 
 </body>
 </html>
