--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,8 @@
 <a href="hello/screen-model-path/123">05. screen-model-path/123</a> <br>
 <a href="hello/form-screen">06. form-screen</a> <br>
 <a href="hello/json-screen">07. json-screen</a> <br>
-<a href="members">08. members</a> <br>
+<a href="member/create">08. member create</a> <br>
+<a href="members">09. members list</a> <br>
 
 </body>
 </html>
